[tool.poetry]
name = "main"
version = "0.1.0"
description = ""
authors = ["Emmanuel Ani <emmanuelani234@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ultralytics = "^8.3.52"
uvicorn = "^0.34.0"
fastapi = "^0.115.6"
python-multipart = "^0.0.20"
torch = "^2.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
